--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "turbolinks": "^5.2.0"
+    "@rails/webpacker": "^5.4.4",
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.88.2"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
 }
