--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  email: MyString
+  username: username1
+  email: email1@mail.com
 
 two:
-  username: MyString
-  email: MyString
+  username: username2
+  email: email2@mail.com
